# GraphicProgramming

./: .gitignore  CMakeLists.txt  README.md  triangle.cpp
externalLib/glad/: CMakeLists.txt  glad.c
src/: main.cpp
